src/test/ui/feature-gates/feature-gate-generic_associated_types.stderr
error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:4:5
   |
LL |     type Pointer<T>: Deref<Target = T>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:6:5
   |
LL |     type Pointer2<T>: Deref<Target = T> where T: Clone, U: Clone;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:6:5
   |
LL |     type Pointer2<T>: Deref<Target = T> where T: Clone, U: Clone;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:14:5
   |
LL |     type Pointer<Usize> = Box<Usize>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: generic associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:16:5
   |
LL |     type Pointer2<U32> = Box<U32>;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:21:5
   |
LL |     type Assoc where Self: Sized;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error[E0658]: where clauses on associated types are unstable
  --> $DIR/feature-gate-generic_associated_types.rs:26:5
   |
LL |     type Assoc where Self: Sized = Foo;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/44265
   = help: add #![feature(generic_associated_types)] to the crate attributes to enable

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0658`.
